--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -8,3 +8,8 @@
   name: ansible_nomad
   scm: git
   version: master
+
+- src: https://github.com/blmhemu/ansible-role-docker
+  name: ansible_docker
+  scm: git
+  version: master
