--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -29,7 +29,7 @@
     cache_valid_time: 3600
     upgrade: dist
 
-- name: Reboot if required
+- name: Check if reboot-required file is set
   stat:
     path: /var/run/reboot-required
   register: reboot_required_file
@@ -50,11 +50,15 @@
     hostname_status.changed or
     cgroup_changed.results[0].changed == true
 
-- name: Clean unused items
+- name: Clean unused deps and configs
   become: true
   apt:
     autoremove: yes
     purge: yes
+
+- name: Clean apt cache
+  become: true
+  apt:
     autoclean: yes
 
 - name: Install useful packages
