--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -41,6 +41,26 @@
   register: hostname_status
   when: ansible_hostname != inventory_hostname
 
+- name: add hostname to /etc/hosts
+  become: true
+  vars:
+    comment: '# added by ansible'
+  lineinfile:
+    dest: /etc/hosts
+    regexp: "127[.]0[.]0[.]1.*"
+    line: "127.0.0.1 localhost.localdomain localhost {{ ansible_hostname }} {{ comment }}"
+    state: present
+    backup: yes
+
+- name: Add Ansible inventory mappings to /etc/hosts
+  become: true
+  blockinfile:
+    path: /etc/hosts
+    block: |
+      {% for host in groups['all'] %}
+      {{ hostvars[host].ansible_host }} {{ host }}
+      {% endfor %}
+
 # TODO: Check if this can be done in a handler
 - name: Reboot if required
   become: true
