--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -13,3 +13,8 @@
   name: ansible_docker
   scm: git
   version: master
+
+- src: https://github.com/artis3n/ansible-role-tailscale.git
+  name: ansible_tailscale
+  scm: git
+  version: main
