--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -1,88 +1,6 @@
 ---
-# tasks file for bootstrap
-
-- name: Enable cgroups v2 in boot options
-  become: true
-  replace:
-    path: /boot/firmware/cmdline.txt
-    regexp: '^([\w](?!.*\b{{ item }}\b).*)$'
-    replace: '\1 {{ item }}'
-  with_items:
-  - "systemd.unified_cgroup_hierarchy=1"
-  register: cgroup_changed
-
-- name: Set timezone to Asia/Kolkata
-  become: true
-  timezone:
-    name: Asia/Kolkata
-
-- name: Ensure US locale exists
-  become: true
-  locale_gen:
-    name: en_US.UTF-8
-    state: present
-
-- name: Update apt-cache and do dist upgrade
-  become: true
-  apt:
-    update_cache: yes
-    cache_valid_time: 3600
-    upgrade: dist
-
-- name: Check if reboot-required file is set
-  stat:
-    path: /var/run/reboot-required
-  register: reboot_required_file
-
-- name: Ensure hostname is properly set
-  become: true
-  hostname:
-    name: "{{ inventory_hostname }}"
-  register: hostname_status
-  when: ansible_hostname != inventory_hostname
-
-- name: add hostname to /etc/hosts
-  become: true
-  vars:
-    comment: '# added by ansible'
-  lineinfile:
-    dest: /etc/hosts
-    regexp: "127[.]0[.]0[.]1.*"
-    line: "127.0.0.1 localhost.localdomain localhost {{ ansible_hostname }} {{ comment }}"
-    state: present
-    backup: yes
-
-- name: Add Ansible inventory mappings to /etc/hosts
-  become: true
-  blockinfile:
-    path: /etc/hosts
-    block: |
-      {% for host in groups['all'] %}
-      {{ hostvars[host].ansible_host }} {{ host }}
-      {% endfor %}
-
-# TODO: Check if this can be done in a handler
-- name: Reboot if required
-  become: true
-  reboot:
+- name: Bootstrap debian installation
+  import_tasks: debian.yml
   when: >
-    reboot_required_file.stat.exists == true or
-    hostname_status.changed or
-    cgroup_changed.results[0].changed == true
-
-- name: Clean unused deps and configs
-  become: true
-  apt:
-    autoremove: yes
-    purge: yes
-
-- name: Clean apt cache
-  become: true
-  apt:
-    autoclean: yes
-
-- name: Install useful packages
-  become: true
-  apt:
-    name: "{{ packages }}"
-    state: present
+    ansible_distribution == "Debian" or
+    ansible_distribution == "Ubuntu"
