--- a/roles/bootstrap/tasks/debian.yml
+++ b/roles/bootstrap/tasks/debian.yml
@@ -64,12 +64,10 @@
 
 - name: add hostname to /etc/hosts
   become: true
-  vars:
-    comment: '# added by ansible'
   lineinfile:
     dest: /etc/hosts
     regexp: "127[.]0[.]0[.]1.*"
-    line: "127.0.0.1 localhost.localdomain localhost {{ ansible_hostname }} {{ comment }}"
+    line: "127.0.0.1 localhost.localdomain localhost {{ ansible_hostname }} # added by ansible"
     state: present
     backup: yes
 
