--- a/playbook.yml
+++ b/playbook.yml
@@ -56,6 +56,7 @@
         nomad_consul_address: "{{ansible_tailscale0.ipv4.address}}:8500"
 
 - name: Configure dnsmasq to resolve consul subdomain
+  hosts: consul_instances
   roles:
     - role: ansible_dnsmasq
       vars:
