--- a/playbook.yml
+++ b/playbook.yml
@@ -46,6 +46,7 @@
         nomad_iface: tailscale0
         nomad_use_consul: true
         nomad_consul_address: "{{ansible_tailscale0.ipv4.address}}:8500"
+        nomad_bootstrap_expect: 1 # Currently when nomad_use_consul is true, this is being set wrongly
         nomad_podman_version: 0.2.0
         nomad_plugins:
           nomad-driver-podman:
