--- a/playbook.yml
+++ b/playbook.yml
@@ -72,6 +72,7 @@
           interface=tailscale0
           bind-dynamic
 
+# TODO: Make this role better for mirrored / raidz configurations
 - name: Setup ZFS
   hosts: nas
   roles:
@@ -87,3 +88,33 @@
           6435376335336133363634376332386139353766656131376463
         pool_name: neo
         mount_point: /mnt/{{ pool_name }}
+
+# TODO: Make this role better for multiple NAS boxes
+- name: Create required zfs datasets
+  hosts: nas
+  vars:
+    pool_name: neo
+    datasets:
+      # How to select sensible props -
+      # 1. https://davidstephens.uk/ansible-nas/zfs/zfs_configuration/
+      # 2. https://jrs-s.net/2018/08/17/zfs-tuning-cheat-sheet/
+      # The first item is the whole pool. Try not to f-up.
+      - name: "{{ pool_name }}"
+        state: present
+        props: compression=zstd atime=off
+      # Config files do not take much space.
+      - name: "{{ pool_name }}/config"
+        state: present
+        props: compression=off
+      # Movies and shows are large and already compressed
+      - name: "{{ pool_name }}/flix"
+        state: present
+        props: recordsize=1M compression=off exec=off
+  tasks:
+    - name: Create datasets
+      become: true
+      zfs:
+        name: "{{ item.name }}"
+        state: "{{ item.state }}"
+        extra_zfs_properties: "{{ item.props }}"
+      loop: "{{ datasets }}"
