--- a/host_vars/nas0.yml
+++ b/host_vars/nas0.yml
@@ -37,39 +37,54 @@ datasets:
   - name: "{{ pool_name }}/config/bzr"
   - name: "{{ pool_name }}/config/jkt"
   - name: "{{ pool_name }}/config/qbt"
+  # Movies and shows are large and already compressed
+  - name: "{{ pool_name }}/drive/fbr"
+  - name: "{{ pool_name }}/drive/syn"
 # Nomad is not fun for stateful workloads
 nomad_host_volumes:
-  - name: fbr
+  - name: fbrd
+    path: "{{ pool_mount_point }}/drive/fbr"
+    owner: ubuntu
+    group: ubuntu
+    mode: u=rwx,g=r,o=r
+    read_only: false
+  - name: synd
+    path: "{{ pool_mount_point }}/drive/syn"
+    owner: ubuntu
+    group: ubuntu
+    mode: u=rwx,g=r,o=r
+    read_only: false
+  - name: fbrc
     path: "{{ pool_mount_point }}/config/fbr"
     owner: ubuntu
     group: ubuntu
     mode: u=rwx,g=r,o=r
     read_only: false
-  - name: bzr
+  - name: bzrc
     path: "{{ pool_mount_point }}/config/bzr"
     owner: ubuntu
     group: ubuntu
     mode: u=rwx,g=r,o=r
     read_only: false
-  - name: jkt
+  - name: jktc
     path: "{{ pool_mount_point }}/config/jkt"
     owner: ubuntu
     group: ubuntu
     mode: u=rwx,g=r,o=r
     read_only: false
-  - name: rdr
+  - name: rdrc
     path: "{{ pool_mount_point }}/config/rdr"
     owner: ubuntu
     group: ubuntu
     mode: u=rwx,g=r,o=r
     read_only: false
-  - name: snr
+  - name: snrc
     path: "{{ pool_mount_point }}/config/snr"
     owner: ubuntu
     group: ubuntu
     mode: u=rwx,g=r,o=r
     read_only: false
-  - name: qbt
+  - name: qbtc
     path: "{{ pool_mount_point }}/config/qbt"
     owner: ubuntu
     group: ubuntu
