--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,13 @@
 [defaults]
-inventory=inventory
-remote_user=ubuntu
-ask_pass=false
+inventory   = inventory
+remote_user = ubuntu
+ask_pass    = False
 
 [privilege_escalation]
-become_method=sudo
-become_user=root
-become_ask_password=False
+become_method       = sudo
+become_user         = root
+become_ask_password = False
+
+[ssh_connection]
+pipelining  = True
+ssh_args    = -o ControlMaster=auto -o ControlPersist=60s
