--- a/nomad_jobs.yml
+++ b/nomad_jobs.yml
@@ -8,19 +8,18 @@
       apt:
         name: python3-pip
         state: present
-    - name: Install python nomad
+    - name: Install python-nomad
       pip:
         name: python-nomad
         state: present
+    - name: Load nomad vars
+      include_vars: file=nomad_jobs/vars.yml
     - name: Jobs
       community.general.nomad_job:
         host: "{{ ansible_tailscale0.ipv4.address }}"
         use_ssl: no
         state: present
-        content: "{{ lookup('ansible.builtin.file', 'nomad_jobs/echo.nomad') }}"
+        content: "{{ lookup('template', '{{ item }}') }}"
         timeout: 120
-    - name: lol
-      debug:
-        msg: "{{ item }}"
-      loop: "{{ lookup('fileglob', 'nomad_jobs/*', wantlist=True) }}"
-
+      with_fileglob:
+        - nomad_jobs/*.nomad.j2
