--- a/group_vars/nomad_clients.yml
+++ b/group_vars/nomad_clients.yml
@@ -9,3 +9,6 @@ nomad_host_networks:
   - name: private
     cidr: 192.168.0.1/24
     reserved_ports: 22
+  - name: default
+    cidr: 192.168.0.1/24
+    reserved_ports: 22
