--- a/group_vars/nomad_instances.yml
+++ b/group_vars/nomad_instances.yml
@@ -6,6 +6,7 @@ nomad_bootstrap_expect: 1 # Currently when nomad_use_consul is true, this is bei
 nomad_use_consul: true
 nomad_podman_enable: true
 nomad_podman_version: 0.2.0
+nomad_cni_enable: true
 nomad_plugins:
   nomad-driver-podman:
     config:
