--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
-inventory   = inventory
-remote_user = ubuntu
-ask_pass    = False
+inventory       = inventory
+remote_user     = ubuntu
+ask_pass        = False
+ask_vault_pass  = True
 
 [privilege_escalation]
 become_method       = sudo
