--- a/group_vars/nomad_clients.yml
+++ b/group_vars/nomad_clients.yml
@@ -1,8 +1,8 @@
 ---
 
-nomad_ca_file: /var/nomad/nomad-agent-ca.pem
-nomad_cert_file: /var/nomad/global-client-nomad-0.pem
-nomad_key_file: /var/nomad/global-client-nomad-0-key.pem
+nomad_ca_file: nomad-agent-ca.pem
+nomad_cert_file: global-client-nomad-0.pem
+nomad_key_file: global-client-nomad-0-key.pem
 
 docker_add_nonroot_users: true
 docker_nonroot_users:
