--- a/group_vars/nomad_instances.yml
+++ b/group_vars/nomad_instances.yml
@@ -4,16 +4,20 @@ nomad_version: 1.1.2
 nomad_iface: tailscale0
 nomad_bootstrap_expect: 1 # Currently when nomad_use_consul is true, this is being set wrongly
 nomad_use_consul: true
-nomad_podman_enable: true
-nomad_podman_version: 0.3.0
-nomad_cni_enable: true
+# nomad_cni_enable: true
+# nomad_podman_enable: true
+# nomad_podman_version: 0.3.0
+# nomad_plugins:
+#   nomad-driver-podman:
+#     config:
+#       socket_path: unix://run/user/1000/podman/podman.sock
+#       volumes:
+#         enabled: true
+#       recover_stopped: true
 nomad_encrypt_enable: true
-nomad_plugins:
-  nomad-driver-podman:
-    config:
-      socket_path: unix://run/user/1000/podman/podman.sock
-      volumes:
-        enabled: true
-      recover_stopped: true
 nomad_tls_enable: true
+nomad_tls_copy_keys: true
+nomad_ca_remote_dir: "tls/nomad/ca"
+nomad_cert_remote_dir: "tls/nomad/{{inventory_hostname}}"
+nomad_key_remote_dir: "tls/nomad/{{inventory_hostname}}"
 nomad_rpc_upgrade_mode: false
