--- a/group_vars/nomad_servers.yml
+++ b/group_vars/nomad_servers.yml
@@ -1,5 +1,5 @@
 ---
 
-nomad_ca_file: /var/nomad/nomad-agent-ca.pem
-nomad_cert_file: /var/nomad/global-server-nomad-0.pem
-nomad_key_file: /var/nomad/global-server-nomad-0-key.pem
+nomad_ca_file: nomad-agent-ca.pem
+nomad_cert_file: global-server-nomad-0.pem
+nomad_key_file: global-server-nomad-0-key.pem
