--- a/tls_test.yml
+++ b/tls_test.yml
@@ -12,15 +12,6 @@
 
 - name: Install nomad
   hosts: nomad_instances
-  # gather_facts: no
-  vars:
-    - tls_dir: "tls"
-    - tls_dir_nomad: "{{ tls_dir }}/nomad"
-    - tls_dir_nomad_ca: "{{ tls_dir_nomad }}/ca"
-    - tls_dir_nomad_cli: "{{ tls_dir_nomad }}/cli"
-    - tls_dir_consul: "{{ tls_dir }}/consul"
-    - tls_dir_consul_ca: "{{ tls_dir_consul }}/ca"
-    - tls_dir_consul_cli: "{{ tls_dir_consul }}/cli"
   tasks:
     - name: Ensure tls dirs exists for nomad and consul
       file:
@@ -50,12 +41,6 @@
         creates: "nomad-agent-ca-key.pem"
       run_once: true
       delegate_to: 127.0.0.1
-      when:
-
-    - name: Create certs for nomad servers
-      debug: 
-        msg: "{{ ansible_tailscale0.ipv4.address }}"
-      delegate_to: 127.0.0.1
     
     - name: Create certs for nomad servers
       command: >
@@ -64,13 +49,13 @@
         -ca={{ playbook_dir }}/{{ tls_dir_nomad_ca }}/nomad-agent-ca.pem
         -key={{ playbook_dir }}/{{ tls_dir_nomad_ca }}/nomad-agent-ca-key.pem
         -additional-ipaddress={{ ansible_tailscale0.ipv4.address }}
-        -domain nomad
+        -additional-ipaddress={{ ansible_default_ipv4.address }}
+        -domain=nomad
         -dc=global
       args:
         chdir: "{{ tls_dir_nomad }}/{{ inventory_hostname }}"
         creates: "global-server-nomad-0-key.pem"
       delegate_to: 127.0.0.1
-
       when: "'nomad_servers' in group_names"
 
     - name: Create certs for nomad clients
@@ -80,7 +65,8 @@
         -ca={{ playbook_dir }}/{{ tls_dir_nomad_ca }}/nomad-agent-ca.pem
         -key={{ playbook_dir }}/{{ tls_dir_nomad_ca }}/nomad-agent-ca-key.pem
         -additional-ipaddress={{ ansible_tailscale0.ipv4.address }}
-        -domain nomad
+        -additional-ipaddress={{ ansible_default_ipv4.address }}
+        -domain=nomad
         -dc=global
       args:
         chdir: "{{ tls_dir_nomad }}/{{ inventory_hostname }}"
@@ -94,7 +80,7 @@
         -cli
         -ca={{ playbook_dir }}/{{ tls_dir_nomad_ca }}/nomad-agent-ca.pem
         -key={{ playbook_dir }}/{{ tls_dir_nomad_ca }}/nomad-agent-ca-key.pem
-        -domain nomad
+        -domain=nomad
         -dc=global
       args:
         chdir: "{{ tls_dir_nomad_cli }}"
@@ -102,13 +88,51 @@
       run_once: true
       delegate_to: 127.0.0.1
 
-    - name: Install Nomad TLS
-      become: true
-      copy:
-        src: "{{ item }}"
-        dest: /var/nomad
-        owner: root
-        group: bin
-      with_fileglob:
-        - "{{ tls_dir_nomad_ca }}/nomad-agent-ca.pem"
-        - "{{ tls_dir_nomad }}/{{inventory_hostname}}/*"
+    - name: Create consul CA
+      command: consul tls ca create
+      args:
+        chdir: "{{ tls_dir_consul_ca }}"
+        creates: "consul-agent-ca-key.pem"
+      run_once: true
+      delegate_to: 127.0.0.1
+      when:
+    
+    - name: Create certs for consul servers
+      command: >
+        consul tls cert create
+        -server
+        -ca={{ playbook_dir }}/{{ tls_dir_consul_ca }}/consul-agent-ca.pem
+        -key={{ playbook_dir }}/{{ tls_dir_consul_ca }}/consul-agent-ca-key.pem
+        -additional-ipaddress={{ ansible_tailscale0.ipv4.address }}
+        -additional-ipaddress={{ ansible_default_ipv4.address }}
+      args:
+        chdir: "{{ tls_dir_consul }}/{{ inventory_hostname }}"
+        creates: "dc1-server-consul-0-key.pem"
+      delegate_to: 127.0.0.1
+      when: "'consul_servers' in group_names"
+
+    - name: Create certs for consul clients
+      command: >
+        consul tls cert create
+        -client
+        -ca={{ playbook_dir }}/{{ tls_dir_consul_ca }}/consul-agent-ca.pem
+        -key={{ playbook_dir }}/{{ tls_dir_consul_ca }}/consul-agent-ca-key.pem
+        -additional-ipaddress={{ ansible_tailscale0.ipv4.address }}
+        -additional-ipaddress={{ ansible_default_ipv4.address }}
+      args:
+        chdir: "{{ tls_dir_consul }}/{{ inventory_hostname }}"
+        creates: "dc1-client-consul-0-key.pem"
+      delegate_to: 127.0.0.1
+      when: "'consul_clients' in group_names"
+
+    - name: Create certs for consul cli
+      command: >
+        consul tls cert create
+        -cli
+        -ca={{ playbook_dir }}/{{ tls_dir_consul_ca }}/consul-agent-ca.pem
+        -key={{ playbook_dir }}/{{ tls_dir_consul_ca }}/consul-agent-ca-key.pem
+      args:
+        chdir: "{{ tls_dir_consul_cli }}"
+        creates: "dc1-cli-consul-0-key.pem"
+      run_once: true
+      delegate_to: 127.0.0.1
