--- a/group_vars/nomad_instances.yml
+++ b/group_vars/nomad_instances.yml
@@ -14,9 +14,11 @@ nomad_plugins:
       volumes:
         enabled: true
       recover_stopped: true
+
+# TLS related
 nomad_encrypt_enable: true
 nomad_tls_enable: true
 nomad_tls_copy_keys: true
-nomad_ca_src_dir: "tls/nomad/ca"
-nomad_cert_src_dir: "tls/nomad/{{inventory_hostname}}"
-nomad_key_src_dir: "tls/nomad/{{inventory_hostname}}"
+nomad_ca_src_dir: "{{ tls_dir_nomad_ca }}"
+nomad_cert_src_dir: "{{ tls_dir_nomad }}/{{ inventory_hostname }}"
+nomad_key_src_dir: "{{ tls_dir_nomad }}/{{ inventory_hostname }}"
