--- a/group_vars/consul_servers.yml
+++ b/group_vars/consul_servers.yml
@@ -1,5 +1,4 @@
 ---
 
-consul_tls_ca_crt: consul-agent-ca.pem
-consul_tls_server_crt: dc1-server-consul-0.pem
-consul_tls_server_key: dc1-server-consul-0-key.pem
+consul_tls_server_crt: "{{ tls_dir_consul }}/{{ inventory_hostname }}/dc1-server-consul-0.pem"
+consul_tls_server_key: "{{ tls_dir_consul }}/{{ inventory_hostname }}/dc1-server-consul-0-key.pem"
