--- a/group_vars/nomad_instances.yml
+++ b/group_vars/nomad_instances.yml
@@ -19,8 +19,6 @@ nomad_plugins:
 nomad_encrypt_enable: true
 nomad_tls_enable: true
 nomad_tls_copy_keys: true
-nomad_ca_src_dir: "{{ tls_dir_nomad_ca }}"
-nomad_cert_src_dir: "{{ tls_dir_nomad }}/{{ inventory_hostname }}"
-nomad_key_src_dir: "{{ tls_dir_nomad }}/{{ inventory_hostname }}"
+nomad_ca_file: "{{ tls_dir_nomad_ca }}/nomad-agent-ca.pem"
 nomad_verify_server_hostname: true
 nomad_verify_https_client: true
