--- a/group_vars/nomad_servers.yml
+++ b/group_vars/nomad_servers.yml
@@ -1,5 +1,4 @@
 ---
 
-nomad_ca_file: nomad-agent-ca.pem
-nomad_cert_file: global-server-nomad-0.pem
-nomad_key_file: global-server-nomad-0-key.pem
+nomad_cert_file: "{{ tls_dir_nomad }}/{{ inventory_hostname }}/global-server-nomad-0.pem"
+nomad_key_file: "{{ tls_dir_nomad }}/{{ inventory_hostname }}/global-server-nomad-0-key.pem"
