--- a/group_vars/consul_instances.yml
+++ b/group_vars/consul_instances.yml
@@ -25,5 +25,5 @@ consul_tls_verify_outgoing: true
 consul_tls_verify_incoming_rpc: true
 consul_tls_verify_incoming_https: true
 consul_tls_verify_server_hostname: true
-consul_ports_http: -1
-consul_ports_https: 8501
+# consul_ports_http: -1
+# consul_ports_https: 8501
