Added consul ssl for nomad

--- a/group_vars/consul_instances.yml
+++ b/group_vars/consul_instances.yml
@@ -20,10 +20,11 @@ consul_tls_ca_crt: "{{ tls_dir_consul_ca }}/consul-agent-ca.pem"
 # consul_tls_ca_src_dir: "{{ tls_dir_consul_ca }}"
 # consul_tls_cert_src_dir: "{{ tls_dir_consul }}/{{ inventory_hostname }}"
 # consul_tls_key_src_dir: "{{ tls_dir_consul }}/{{ inventory_hostname }}"
+consul_tls_dir: "/etc/consul/ssl"
 consul_tls_verify_incoming: true
 consul_tls_verify_outgoing: true
 consul_tls_verify_incoming_rpc: true
 consul_tls_verify_incoming_https: true
 consul_tls_verify_server_hostname: true
-# consul_ports_http: -1
-# consul_ports_https: 8501
+consul_ports_http: -1
+consul_ports_https: 8501
