--- a/group_vars/nomad_instances.yml
+++ b/group_vars/nomad_instances.yml
@@ -3,8 +3,19 @@
 nomad_version: 1.1.2
 nomad_iface: tailscale0
 nomad_bootstrap_expect: 1 # Currently when nomad_use_consul is true, this is being set wrongly
+
+# Consul
 nomad_use_consul: true
+nomad_consul_address: "localhost:8501"
+nomad_consul_ssl: true
+nomad_consul_ca_file: "{{ consul_tls_dir }}/{{ consul_tls_ca_crt | basename }}"
+nomad_consul_cert_file: "{{ consul_tls_dir }}/{{ consul_tls_server_crt | basename }}"
+nomad_consul_key_file: "{{ consul_tls_dir }}/{{ consul_tls_server_key | basename }}"
+
+# CNI
 nomad_cni_enable: true
+
+# Podman
 nomad_podman_enable: true
 nomad_podman_version: 0.3.0
 nomad_plugins:
