--- a/roles/ansible_dnsmasq/tasks/main.yml
+++ b/roles/ansible_dnsmasq/tasks/main.yml
@@ -74,3 +74,6 @@
     name: dnsmasq
     state: restarted
     enabled: yes
+
+- name: Wait 600 seconds for target connection to become reachable/usable
+  wait_for_connection:
