--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,13 +1,13 @@
 [defaults]
 inventory       = inventory
 remote_user     = ubuntu
-ask_pass        = False
-ask_vault_pass  = True
+ask_pass        = false
+ask_vault_pass  = true
 
 [privilege_escalation]
 become_method       = sudo
 become_user         = root
-become_ask_password = False
+become_ask_password = false
 
 [ssh_connection]
 pipelining  = True
