Fixed role and collection installs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,8 @@ inventory       = inventory
 remote_user     = ubuntu
 ask_pass        = false
 ask_vault_pass  = true
+collections_paths = ./
+roles_path = ./roles
 
 [privilege_escalation]
 become_method       = sudo
