--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,5 +12,5 @@ become_user         = root
 become_ask_password = false
 
 [ssh_connection]
-pipelining  = True
+pipelining  = true
 ssh_args    = -o ControlMaster=auto -o ControlPersist=60s
