--- a/playbook.yml
+++ b/playbook.yml
@@ -1,20 +1,27 @@
 ---
 
-- name: Ready nodes
-  hosts: all
-  roles:
-    - role: role-ntp
-      become: true
-    - blmhemu.general.bootparams
-    - blmhemu.general.bootstrap
-    - role-tailscale
-    - role-docker
+#- name: Ready nodes
+#  hosts: all
+#  roles:
+#    - role: role-ntp
+#      become: true
+#    - blmhemu.general.bootparams
+#    - blmhemu.general.bootstrap
+#    - role-tailscale
+#    - role-docker
 
 - name: Setup consul cluster
   hosts: consul_instances
+  pre_tasks:
+    - include_tasks: tasks/tls_consul.yml
+  roles:
+    - blmhemu.general.consul
 
-- name: Setup nomad cluster
-  hosts: nomad_instances
+#- name: Setup nomad cluster
+#  hosts: nomad_instances
+#  pre_tasks:
+#    - include: tasks/tls_nomad.yml
+#  role:
+#    - blmhemu.general.nomad
 
 # Need to have some roles for NAS
-
