--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -34,16 +34,16 @@ tls_nomad_dir: "{{ tls_base_dir }}/nomad"
 consul_version: 1.10.2
 consul_datacenter: dc1
 consul_encrypt_key: SnyBe2ZmIjMk26532o6pqg8zY+G8+9J6LTR5XcglJKk=
-consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca-key.pem"
+consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca.pem"
 consul_cert_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-{{ consul_role }}-consul-0.pem"
 consul_key_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-{{ consul_role }}-consul-0-key.pem"
 
 # Consul
 nomad_version: 1.1.5
 nomad_region: global
-nomad_ca_src_file: "{{ tls_nomad_dir }}/ca/nomad-agent-ca-key.pem"
+nomad_ca_src_file: "{{ tls_nomad_dir }}/ca/nomad-agent-ca.pem"
 nomad_cert_src_file: "{{ tls_nomad_dir }}/{{ inventory_hostname }}/{{ nomad_region }}-{{ 'server' if nomad_role != 'client' else 'client' }}-nomad-0.pem"
 nomad_key_src_file: "{{ tls_nomad_dir }}/{{ inventory_hostname }}/{{ nomad_region }}-{{ 'server' if nomad_role != 'client' else 'client' }}-nomad-0-key.pem"
-nomad_consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca-key.pem"
+nomad_consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca.pem"
 nomad_consul_cert_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-cli-consul-0.pem"
 nomad_consul_key_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-cli-consul-0-key.pem"
