Fix formatting bug

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ---
-
+#
 #- name: Ready nodes
 #  hosts: all
 #  roles:
@@ -9,19 +9,19 @@
 #    - blmhemu.general.bootstrap
 #    - role-tailscale
 #    - role-docker
-
-- name: Setup consul cluster
-  hosts: consul_instances
-  pre_tasks:
-    - include_tasks: tasks/tls_consul.yml
-  roles:
-    - blmhemu.general.consul
+#
+#- name: Setup consul cluster
+#  hosts: consul_instances
+#  pre_tasks:
+#    - include_tasks: tasks/tls_consul.yml
+#  roles:
+#    - blmhemu.general.consul
 
 - name: Setup nomad cluster
   hosts: nomad_instances
   pre_tasks:
-    - include: tasks/tls_nomad.yml
-  role:
+    - include_tasks: tasks/tls_nomad.yml
+  roles:
     - blmhemu.general.nomad
 
 # Need to have some roles for NAS
